add RSA SSH types with signature verification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ name = "ssh-wire"
 version = "0.1.0"
 
 [dependencies]
+base64 = "*"
 rand = "*"
+ring = "*"
 serde = "*"
 serde_codegen_internals = "*"
 serde_derive = "*"
+untrusted = "*"
 
 [dependencies.byteorder]
 path = "../byteorder"
