--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ base64 = "*"
 byteorder = "*"
 libc = "*"
 rand = "*"
-ring = "0.9.1"
-serde = "*"
-serde_codegen_internals = "*"
-serde_derive = "*"
+ring = "*"
+serde = "1.0.2"
+serde_derive = "1.0.2"
 untrusted = "*"
 
 [lib]
