--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ base64 = "*"
 byteorder = "*"
 libc = "*"
 rand = "*"
-ring = "*"
+ring = "0.17.0-alpha.4"
 serde = "1.0.2"
 serde_derive = "1.0.2"
-untrusted = "*"
 
 [lib]
 crate-type = ["staticlib", "cdylib"]
